--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" href="./coder1.ico" />
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
     <title>William Alvarez</title>
   </head>
   <script>
