--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,14 @@
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FYL8902NKD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FYL8902NKD');
+</script>
     <title>William Alvarez</title>
   </head>
   <script>
